Folder changes for readability and link all image and links correctly

--- a/style.scss
+++ b/style.scss
@@ -177,6 +177,11 @@ aside {
     }
 }
 
+.containerr {
+    margin: 2rem 0 0rem 0;
+    background-color: rgba(168, 0, 56, 0.1);
+}
+
 footer {
     padding: 20px;
     text-align: center;
